...
              children: <Widget>[
                TextFormField(
                  maxLines: 1,
                  controller: widget.subjectController,
                  decoration: const InputDecoration(
                    border: OutlineInputBorder(),
                    hintText: 'Subject',
                    labelText: 'Subject',
                  ),
                ),
                const SizedBox(height: 10),
                Expanded(
                  child: TextFormField(
...
                    expands: true,
                    maxLines: null,
                    minLines: null,
                    textAlignVertical: TextAlignVertical.top,
                    decoration: const InputDecoration(
                      border: OutlineInputBorder(),
                      hintText: 'Data',
                      labelText: 'Data',
                    ),
                  ),
                ),
                const SizedBox(height: 10),
                Row(
...
              },
            ),
            Tooltip(
              message: 'Hint: Ctrl+Enter (Cmd+Enter on Mac) to send',
              child: TextButton(
                onPressed: _send,
                child: const Text('Send'),
              ),
            ),
          ],
        ),
      ),
    );
...
